# openstack-operator

./: .gitignore  .jenkins.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
crds/: openstackdomain_crd.yaml  openstackflavor_crd.yaml  openstackimage_crd.yaml  openstacknetwork_crd.yaml  openstackproject_crd.yaml
kustomize/base/: deployment.yaml  kustomization.yaml  networkpolicy.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
src/: __init__.py  constants.py  handlers.py  metrics.py  models.py  openstack_client.py  ratelimit.py  state.py  utils.py
src/handlers/: __init__.py  domain.py  flavor.py  gc_cluster.py  image.py  network.py
src/resources/: __init__.py  domain.py  federation.py  flavor.py  garbage_collection.py  image.py  network.py  project.py  provider_network.py  quota.py  registry.py  role_binding.py  security_group.py
tests/: __init__.py  test_models.py  test_ratelimit.py  test_utils.py
