[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openstack-operator"
version = "0.1.0"
description = "Kopf-based Kubernetes operator for managing OpenStack projects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Micke Nordin", email = "kano@sunet.se" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "kopf>=1.37.0",
    "kubernetes>=28.1.0",
    "openstacksdk>=3.0.0",
    "pydantic>=2.5.0",
    "prometheus_client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
]

[project.scripts]
openstack-operator = "src.handlers:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
